--- a/Portifolio/package.json
+++ b/Portifolio/package.json
@@ -9,7 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.2.0",
     "bootstrap": "^4.1.3",
+    "font-awesome": "^4.7.0",
     "jquery": "^1.9.1",
     "popper.js": "^1.14.4",
     "sass": "^1.10.1"
